--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,4 +1,10 @@
-
+<!-- HEADER -->
+<div id="header_wrap" class="outer">
+    <header class="inner">
+      <h1 id="project_title">University of Southampton's NWERC 2018 Preparation</h1>
+      <h2 id="project_tagline"> </h2>
+    </header>
+</div>
 
 
 
