--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,12 @@
     <div id="header_wrap" class="outer">
         <header class="inner">
           <h1 id="project_title">University of Southampton's NWERC 2018 Prep</h1>
-          <h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+          <h2 id="project_tagline">Problems recommended by Halim, S., & Halim, F. (2010). Competitive Programming: Increasing the Lower 
+            Bound of Programming Contests. National University of Singapore. Available at: 
+            <a href="https://www.comp.nus.edu.sg/~stevenha/myteaching/competitive_programming/cp1.pdf">
+              https://www.comp.nus.edu.sg/~stevenha/myteaching/competitive_programming/cp1.pdf
+            </a>
+          </h2>
         </header>
     </div>
 
